# backup-rotator

./: .gitignore  README.md  backup-rotator.service  config.yaml  hello.py  pyproject.toml  run.py
src/: __init__.py  backup_scanner.py  config_validator.py  disk_monitor.py  logger.py  rotation_engine.py  state_manager.py  telegram_notifier.py
