[project]
name = "backup-rotator"
version = "0.1.0"
description = "Automated backup file rotation system with Telegram notifications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "schedule>=1.2.0",
    "tenacity>=8.2.3",
    "python-dateutil>=2.8.2",
    "pydantic>=2.5.0",
]
